@@ -55,31 +55,6 @@ name|DrainDispatcher
 extends|extends
 name|AsyncDispatcher
 block|{
-comment|// flagrant initialize abuse throughout, but safe per
-comment|// http://java.sun.com/docs/books/jls/third_edition/html/typesValues.html#96595
-comment|// and similar grotesqueries
-DECL|field|drained
-specifier|private
-specifier|volatile
-name|boolean
-name|drained
-init|=
-literal|false
-decl_stmt|;
-DECL|field|queue
-specifier|private
-specifier|final
-name|BlockingQueue
-argument_list|<
-name|Event
-argument_list|>
-name|queue
-decl_stmt|;
-DECL|field|mutex
-specifier|final
-name|Object
-name|mutex
-decl_stmt|;
 DECL|method|DrainDispatcher ()
 specifier|public
 name|DrainDispatcher
@@ -112,18 +87,6 @@ argument_list|(
 name|eventQueue
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|queue
-operator|=
-name|eventQueue
-expr_stmt|;
-name|this
-operator|.
-name|mutex
-operator|=
-name|this
-expr_stmt|;
 block|}
 comment|/**    * Busy loop waiting for all queued events to drain.    */
 DECL|method|await ()
@@ -135,7 +98,8 @@ block|{
 while|while
 condition|(
 operator|!
-name|drained
+name|isDrained
+argument_list|()
 condition|)
 block|{
 name|Thread
@@ -144,143 +108,6 @@ name|yield
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-annotation|@
-name|Override
-DECL|method|createThread ()
-name|Runnable
-name|createThread
-parameter_list|()
-block|{
-return|return
-operator|new
-name|Runnable
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|run
-parameter_list|()
-block|{
-while|while
-condition|(
-operator|!
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|isInterrupted
-argument_list|()
-condition|)
-block|{
-synchronized|synchronized
-init|(
-name|mutex
-init|)
-block|{
-comment|// !drained if dispatch queued new events on this dispatcher
-name|drained
-operator|=
-name|queue
-operator|.
-name|isEmpty
-argument_list|()
-expr_stmt|;
-block|}
-name|Event
-name|event
-decl_stmt|;
-try|try
-block|{
-name|event
-operator|=
-name|queue
-operator|.
-name|take
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|ie
-parameter_list|)
-block|{
-return|return;
-block|}
-if|if
-condition|(
-name|event
-operator|!=
-literal|null
-condition|)
-block|{
-name|dispatch
-argument_list|(
-name|event
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-block|}
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getEventHandler ()
-specifier|public
-name|EventHandler
-name|getEventHandler
-parameter_list|()
-block|{
-specifier|final
-name|EventHandler
-name|actual
-init|=
-name|super
-operator|.
-name|getEventHandler
-argument_list|()
-decl_stmt|;
-return|return
-operator|new
-name|EventHandler
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|handle
-parameter_list|(
-name|Event
-name|event
-parameter_list|)
-block|{
-synchronized|synchronized
-init|(
-name|mutex
-init|)
-block|{
-name|actual
-operator|.
-name|handle
-argument_list|(
-name|event
-argument_list|)
-expr_stmt|;
-name|drained
-operator|=
-literal|false
-expr_stmt|;
-block|}
-block|}
-block|}
-return|;
 block|}
 block|}
 end_class
